[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/menu/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TitleLabel" type="Label" parent="."]
margin_left = 192.0
margin_top = 64.0
margin_right = 832.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 2 )
text = "Space Invaders
(Sorta)"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="."]
margin_left = 448.0
margin_top = 320.0
margin_right = 576.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 3 )
text = "Start"

[node name="LifeLabel" type="Label" parent="."]
margin_left = 64.0
margin_top = 560.0
margin_right = 232.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 1 )
valign = 2

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 784.0
margin_top = 560.0
margin_right = 952.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 1 )
valign = 2

[node name="FinalScoreLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
